# verus-docgenerator

./: Cargo.toml  README.md
scripts/: check.sh
src/: doc_item.rs  extraction.rs  grouping.rs  lib.rs  main.rs  markdown.rs  tree_sitter_wrapper.rs
