[package]
name = "verus-docgenerator"
version = "0.1.0"
edition = "2021"

[dependencies]
vstd = { path = "../verus/source/vstd" }
tree-sitter = "0.25"
tree-sitter-verus = { path = "../tree-sitter-verus" }

[package.metadata.verus]
verify = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(verus_keep_ghost)'] }
